FULLSCREEN

-Render.cpp -> postupdate -> rendergetlogicalsize
-Globals.h -> screensize 1 y winfullscreendesktop 1