@@ -4,8 +4,11 @@
 #include "Module.h"
 #include "Globals.h"
 #include "SDL\include\SDL_scancode.h"
+#include "SDL\include\SDL_gamecontroller.h"
 
 #define MAX_KEYS 300
+#define MAX_AXES 300
+#define MAX_BUTTONS 13
 
 enum KEY_STATE
 {
@@ -28,6 +31,11 @@ public:
 
 public:
 	KEY_STATE keyboard[MAX_KEYS];
+	KEY_STATE axes[MAX_AXES];
+	KEY_STATE buttons[MAX_BUTTONS];
+
+	SDL_GameController *controller = nullptr;
+	Uint8 button[MAX_BUTTONS];
 };
 
 #endif // __ModuleInput_H__
